# incident-response-openenv

./: Dockerfile  README.md  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.json  train.py
Incident Response OpenENV/: README.md  models.py  openenv.yaml  requirements.txt
Incident Response OpenENV/server/: Dockerfile  app.py  environment.py
agent/: dqn_agent.py
server/: app.py
server/static/: index.html
