[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "incident-response-openenv"
version = "2.0.0"
description = "AIOps incident-response simulation environment for RL agents"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "aiofiles>=23.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "agent*"]
